Release history for Dist-Zilla-Plugin-INI-Baked

{{$NEXT}}
 [Dependencies::Stats]
 - Dependencies changed since 0.001001, see misc/*.deps* for details
 - develop: +1 ↑1 (suggests: ↑2)

0.001001 2014-08-15T21:16:43Z
 [00 Trivial]
 - CPANDAY!
 - no code changes.
 - whitespace reduced.

 [Dependencies::Stats]
 - Dependencies changed since 0.001000, see misc/*.deps* for details
 - develop: +1 (suggests: ↑1)

 [Misc]
 - Improve source side POD to reduce build side whitespace.

0.001000 2014-08-03T06:41:00Z
 - First version.
