@@ -1,6 +1,8 @@
 This file contains changes in REQUIRED dependencies for standard CPAN phases (configure/build/runtime/test)
 
-0.001002
+0.002000
+ [Added / runtime requires]
+ - Dist::Zilla::Util::ConfigDumper
 
 0.001001 2014-08-15T21:16:43Z
 
