@@ -1,6 +1,6 @@
 This file contains changes in OPTIONAL dependencies for standard CPAN phases (configure/build/runtime/test)
 
-0.001002
+0.002000
 
 0.001001 2014-08-15T21:16:43Z
 
